// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typewriter methods deleteChars should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
]
`;

exports[`Typewriter methods pasteString should correctly add event items to queue if string does not contain html 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "Hello world!",
      "node": null,
    },
    "eventName": "PASTE_STRING",
  },
]
`;

exports[`Typewriter methods removeCharacters should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
  {
    "eventArgs": {},
    "eventName": "REMOVE_CHARACTER",
  },
]
`;

exports[`Typewriter methods runEventLoop should reset queue correctly if event queue is empty and loop option is true 1`] = `
[
  {
    "eventArgs": {
      "delay": 5000,
    },
    "eventName": "CHANGE_DELAY",
  },
]
`;

exports[`Typewriter methods runEventLoop valid delta REMOVE_ALL should correctly push remove last node events with speed change when provided 1`] = `
[
  {
    "eventArgs": {
      "speed": 100,
      "temp": true,
    },
    "eventName": "CHANGE_DELETE_SPEED",
  },
  {
    "eventArgs": {
      "removingCharacterNode": false,
    },
    "eventName": "REMOVE_LAST_VISIBLE_NODE",
  },
  {
    "eventArgs": {
      "speed": 10,
      "temp": true,
    },
    "eventName": "CHANGE_DELETE_SPEED",
  },
]
`;

exports[`Typewriter methods runEventLoop valid delta REMOVE_ALL should correctly push remove last node events without speed change 1`] = `
[
  {
    "eventArgs": {
      "removingCharacterNode": false,
    },
    "eventName": "REMOVE_LAST_VISIBLE_NODE",
  },
]
`;

exports[`Typewriter methods typeCharacters should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "node": null,
      "originalString": "hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": null,
      "originalString": "hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "0",
      "characterIndex": 4,
      "node": null,
      "originalString": "hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
]
`;

exports[`Typewriter methods typeOutAllStrings should correctly add event item to queue when options.strings is a string 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 11,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
]
`;

exports[`Typewriter methods typeOutAllStrings should correctly add multiple event items to queue when options.strings is an array 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 0,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 2,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 4,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 5,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": ",",
      "characterIndex": 6,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 7,
      "node": null,
      "originalString": "world!, ",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "node": null,
      "originalString": "How",
      "stringIndex": 2,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": null,
      "originalString": "How",
      "stringIndex": 2,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 2,
      "node": null,
      "originalString": "How",
      "stringIndex": 2,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "character": "a",
      "characterIndex": 0,
      "node": null,
      "originalString": "are",
      "stringIndex": 3,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 1,
      "node": null,
      "originalString": "are",
      "stringIndex": 3,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 2,
      "node": null,
      "originalString": "are",
      "stringIndex": 3,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "character": "y",
      "characterIndex": 0,
      "node": null,
      "originalString": "you?",
      "stringIndex": 4,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": null,
      "originalString": "you?",
      "stringIndex": 4,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "u",
      "characterIndex": 2,
      "node": null,
      "originalString": "you?",
      "stringIndex": 4,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "?",
      "characterIndex": 3,
      "node": null,
      "originalString": "you?",
      "stringIndex": 4,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event item when string contains only string 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 0,
      "node": null,
      "originalString": "test",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "test",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "s",
      "characterIndex": 2,
      "node": null,
      "originalString": "test",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 3,
      "node": null,
      "originalString": "test",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event items for html wrapper and all string characters 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "node": <strong />,
      "parentNode": null,
    },
    "eventName": "ADD_HTML_TAG_ELEMENT",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "node": <strong />,
      "originalString": "hello world",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 0,
      "node": null,
      "originalString": " ",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "node": <div />,
      "parentNode": null,
    },
    "eventName": "ADD_HTML_TAG_ELEMENT",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 2,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 3,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "a",
      "characterIndex": 4,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 5,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 6,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 7,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "y",
      "characterIndex": 8,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 9,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "u",
      "characterIndex": 10,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "?",
      "characterIndex": 11,
      "node": <div />,
      "originalString": "how are you?",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 0,
      "node": null,
      "originalString": " ",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "node": <p />,
      "parentNode": null,
    },
    "eventName": "ADD_HTML_TAG_ELEMENT",
  },
  {
    "eventArgs": {
      "character": "G",
      "characterIndex": 0,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 2,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "g",
      "characterIndex": 3,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 4,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 5,
      "node": <p />,
      "originalString": "Google",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 0,
      "node": null,
      "originalString": "!!!!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 1,
      "node": null,
      "originalString": "!!!!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 2,
      "node": null,
      "originalString": "!!!!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 3,
      "node": null,
      "originalString": "!!!!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event items for nested html and parent node 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "node": <div
        class="wrapper"
      />,
      "parentNode": <div
        class="parent-node"
      />,
    },
    "eventName": "ADD_HTML_TAG_ELEMENT",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 0,
      "node": <div
        class="wrapper"
      />,
      "originalString": "test!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": <div
        class="wrapper"
      />,
      "originalString": "test!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "s",
      "characterIndex": 2,
      "node": <div
        class="wrapper"
      />,
      "originalString": "test!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 3,
      "node": <div
        class="wrapper"
      />,
      "originalString": "test!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 4,
      "node": <div
        class="wrapper"
      />,
      "originalString": "test!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
]
`;

exports[`Typewriter methods typeString should correctly add event items to queue if string does not contain html 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 11,
      "node": null,
      "originalString": "Hello world!",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
]
`;

exports[`Typewriter shoud setup correctly with default settings 1`] = `
{
  "calledEvents": [],
  "cursorAnimation": null,
  "elements": {
    "container": <div
      id="test"
    >
      <span
        class="Typewriter__wrapper"
      />
      <span
        class="Typewriter__cursor"
      >
        |
      </span>
    </div>,
    "cursor": <span
      class="Typewriter__cursor"
    >
      |
    </span>,
    "wrapper": <span
      class="Typewriter__wrapper"
    />,
  },
  "eventLoop": null,
  "eventLoopPaused": false,
  "eventQueue": [
    {
      "eventArgs": {},
      "eventName": "REMOVE_ALL",
    },
    {
      "eventArgs": {
        "cursor": "|",
      },
      "eventName": "CHANGE_CURSOR",
    },
  ],
  "initialOptions": {
    "autoStart": false,
    "cursor": "|",
    "cursorClassName": "Typewriter__cursor",
    "delay": "natural",
    "deleteSpeed": "natural",
    "devMode": false,
    "loop": false,
    "onCreateTextNode": undefined,
    "onRemoveNode": undefined,
    "pauseFor": 1500,
    "skipAddStyles": false,
    "stringSplitter": undefined,
    "strings": [],
    "wrapperClassName": "Typewriter__wrapper",
  },
  "lastFrameTime": null,
  "pauseUntil": null,
  "reverseCalledEvents": [],
  "visibleNodes": [],
}
`;

exports[`Typewriter shoud setup correctly with default settings 2`] = `
{
  "autoStart": false,
  "cursor": "|",
  "cursorClassName": "Typewriter__cursor",
  "delay": "natural",
  "deleteSpeed": "natural",
  "devMode": false,
  "loop": false,
  "onCreateTextNode": undefined,
  "onRemoveNode": undefined,
  "pauseFor": 1500,
  "skipAddStyles": false,
  "stringSplitter": undefined,
  "strings": [],
  "wrapperClassName": "Typewriter__wrapper",
}
`;

exports[`Typewriter should correctly setup container element with element 1`] = `
<div
  id="test"
>
  <span
    class="Typewriter__wrapper"
  />
  <span
    class="Typewriter__cursor"
  >
    |
  </span>
</div>
`;

exports[`Typewriter should correctly setup container element with selector 1`] = `
<div
  id="test"
>
  <span
    class="Typewriter__wrapper"
  />
  <span
    class="Typewriter__cursor"
  >
    |
  </span>
</div>
`;

exports[`Typewriter should correctly setup queue if autostart is set to true 1`] = `
[
  {
    "eventArgs": {},
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "CHANGE_CURSOR",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "node": null,
      "originalString": "Hello",
      "stringIndex": 0,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 0,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 2,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 4,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 5,
      "node": null,
      "originalString": "world!",
      "stringIndex": 1,
    },
    "eventName": "TYPE_CHARACTER",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "PAUSE_FOR",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "REMOVE_ALL",
  },
]
`;
